--- a/mobile-app/public/manifest.json
+++ b/mobile-app/public/manifest.json
@@ -1,15 +1,51 @@
 {
   "name": "MemoryStream Mobile",
   "short_name": "MemoryStream",
-  "description": "Mobile companion app for MemoryStream TV experience",
+  "description": "Mobile companion app for MemoryStream TV application",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#121212",
-  "theme_color": "#1e88e5",
+  "background_color": "#181c24",
+  "theme_color": "#181c24",
   "icons": [
+    {
+      "src": "icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png",
       "purpose": "any maskable"
     },
@@ -20,20 +56,22 @@
       "purpose": "any maskable"
     }
   ],
-  "orientation": "portrait-primary",
+  "orientation": "portrait",
   "categories": ["entertainment", "utilities"],
   "shortcuts": [
     {
-      "name": "Scan QR Code",
+      "name": "Connect to TV",
+      "short_name": "Connect",
+      "description": "Scan QR code to connect to TV",
       "url": "/?action=scan",
-      "description": "Scan a TV QR code",
-      "icons": [
-        {
-          "src": "icons/scan-96x96.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "icons": [{ "src": "icons/shortcut-connect.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Remote Control",
+      "short_name": "Remote",
+      "description": "Control your TV",
+      "url": "/?tab=remote",
+      "icons": [{ "src": "icons/shortcut-remote.png", "sizes": "96x96" }]
     }
   ],
   "screenshots": [
