Add new services and features for enhanced viewing experience in MemoryStream
- Introduced multiple new services including ContentRecognitionService, SceneAnalysisService, RecommendationService, OptimizedWhisperService, and SharedViewingService to enhance content recognition, scene analysis, and personalized recommendations.
- Implemented MobileSaver and WakeWordDetector components in the mobile app for improved user interaction and voice command capabilities.
- Added AdaptiveStreamingManager to manage video quality based on network conditions, ensuring a seamless viewing experience.
- Updated package.json files across backend and mobile-app to include new dependencies and scripts for enhanced functionality.
- Created enhanced features integration documentation to outline the architecture and data flow for new functionalities.
- Improved overall project structure and documentation to support future development and maintainability.

--- a/tv-app/package.json
+++ b/tv-app/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
     "lint": "eslint src/**/*.js"
   },
   "dependencies": {
     "qrcode": "^1.5.3",
+    "senza-sdk": "^4.2.54",
     "shaka-player": "^4.3.6",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "dashjs": "^4.7.2",
+    "hls.js": "^1.4.12",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
