--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,20 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "node-cache": "^5.1.2",
     "openai": "^4.17.4",
     "qrcode": "^1.5.3",
     "redis": "^4.6.10",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
