--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "socket.io-client": "^4.7.2",
     "qrcode-parser": "^1.0.0",
-    "workbox-window": "^7.0.0"
+    "workbox-window": "^7.0.0",
+    "@tensorflow/tfjs": "^4.12.0",
+    "@tensorflow-models/speech-commands": "^0.5.4",
+    "detect-browser": "^5.3.0",
+    "dexie": "^3.2.4",
+    "recordrtc": "^5.6.2",
+    "localforage": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
